--- a/index.html
+++ b/index.html
@@ -601,6 +601,17 @@ div#right_contents div#rank_value{
 				<td>180</td>
 			</tr>
 			<tr>
+				<td class="skill_boxed_common"><img src="img/黄速度C.png">＃LookatCurren</td>
+				<td>レース中間付近で好位置にいる時に追い抜くと勢いづき進出を開始する</td>
+				<td>継承</td>
+				<td>コモン</td>
+				<td>黄</td>
+				<td> </td>
+				<td> </td>
+				<td style="display: none;">速度</td>
+				<td>180</td>
+			</tr>
+			<tr>
 				<td class="skill_boxed_rare"><img src="img/黄速度R.png">ハヤテ一文字</td>
 				<td>直線で速度が上がる</td>
 				<td>一般</td>
@@ -2798,7 +2809,7 @@ div#right_contents div#rank_value{
 				<td>長距離</td>
 				<td> </td>
 				<td style="display: none;">回復</td>
-				<td>#N/A</td>
+				<td>239</td>
 			</tr>
 			<tr>
 				<td class="skill_boxed_rare"><img src="img/黄加速R.png">逃亡者</td>
@@ -4382,7 +4393,7 @@ div#right_contents div#rank_value{
                     document.getElementById("unique_skill_name").innerHTML = "最強の名をかけて"
                     break;
 		case 31://カレンチャン
-                    document.getElementById("unique_skill_name").innerHTML = "#LookatCurren"
+                    document.getElementById("unique_skill_name").innerHTML = "＃LookatCurren"
                     break;
                 default:
                     break;
