--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" content="ウマ娘,ステータス,スキル,査定,計算,シミュレーター">
 <title>走れバクシンオー</title>
 <style>
 body{
@@ -2347,7 +2347,7 @@ div#right_contents div#rank_value{
 				<td> </td>
 				<td>先行</td>
 				<td style="display: none;">赤視</td>
-				<td>#N/A</td>
+				<td>367</td>
 			</tr>
 			<tr>
 				<td class="skill_boxed_common"><img src="img/赤視C.png">かく乱</td>
