--- a/index.html
+++ b/index.html
@@ -1965,8 +1965,8 @@ div#right_contents div#rank_value{
 				<td>一般</td>
 				<td>レア</td>
 				<td>黄</td>
-				<td> </td>
 				<td>ダート</td>
+				<td> </td>
 				<td style="display: none;">速度</td>
 				<td>508</td>
 			</tr>
@@ -1976,8 +1976,8 @@ div#right_contents div#rank_value{
 				<td>一般</td>
 				<td>コモン</td>
 				<td>黄</td>
-				<td> </td>
 				<td>ダート</td>
+				<td></td>
 				<td style="display: none;">速度</td>
 				<td>217</td>
 			</tr>
@@ -4476,6 +4476,12 @@ div#right_contents div#rank_value{
                     break;
 		case 34://ナリタブライアン
                     document.getElementById("unique_skill_name").innerHTML = "Shadow Break"
+                    break;
+		case 35://マヤノトップガン(ビューティー)
+                    document.getElementById("unique_skill_name").innerHTML = "フラワリー☆マニューバ"
+                    break;
+		case 36://エアグルーヴ(ビューティー)
+                    document.getElementById("unique_skill_name").innerHTML = "薫風、永遠なる瞬間を"
                     break;
                 default:
                     break;
